src/components/_popouts.scss
div[class^="layerContainer"] [role="menu"] {
  // make menu items readable when hovered
  --brand-experiment-560: var(--brand-experiment-25a);
  --brand-experiment-600: var(--brand-experiment);

  [class*="colorDefault"] {
    &[class*="colorBrand"] {
      color: $brand;
    }

    &[class*="focused"] {
      &:not([class*="colorDanger"]),
      [class*="checkbox-"] {
        color: var(--interactive-normal);
      }
    }

    &[role="menuitem"]:not([class*="colorDanger"]):not([id*="user-context-user-volume"]):hover {
      background: var(--background-accent);
      color: $crust;

      [class*="subtext"],
      [class*="caret-"] {
        color: $crust;
      }
    }

    [class*="caret"] {
      color: $text;
    }

    // make active items have dark text
    &:active:not([class*="hideInteraction-"]) {
      color: var(--background-floating);

      [class*="check-"] {
        color: var(--interactive-normal);
      }

      [class*="checkbox-"] {
        color: var(--background-floating);
      }
    }
  }

  // make the switch account username crust when focused
  [class*="focused"] [class*="userMenuUsername"] * {
    color: $crust;
  }

  [class*="colorDanger"][class*="focused"],
  [class*="colorDefault"] [class*="check-"] {
    color: var(--background-floating);
    background-color: $red;
  }

  #guild-header-popout-premium-subscribe {
    div[class^="iconContainer-"] > svg {
      color: $pink;
    }
  }

  // user volume slider
  #user-context-user-volume div[class*="slider-"] {
    div[class*="bar-"] {
      background-color: $surface0;
    }
  }
}

.theme-dark,
.theme-light {
  div[class^="layerContainer"] div[id^="popout_"] > div[class*="didRender-"] {
    &:not([class^="animatorBottom-"]) > div {
      div[class*="flowerStarContainer-"] {
        svg[class*="flowerStar-"] * {
          fill: $brand;
        }
      }
    }
    div[class*="countText"] {
      color: $crust;
    }

    svg[class*="activeIcon"] {
      circle {
        fill: $crust;
      }
      g path {
        fill: $brand;
      }
    }

    div[class*="container"] {
      div[class*="autocompleteArrow-"],
      header {
        background-color: $mantle;
      }

      header > input::placeholder {
        color: $overlay1;
      }

      section {
        background-color: $base;
        color: $text;
      }
    }
  }
}

div[class*="recentMentionsPopout"] {
  div[class^="header-"] {
    div[class^="tabBar"] div[class^="tab"][class*="active-"] {
      color: $base;
    }

    div[class^="controls-"] {
      --background-secondary: #{$surface0};
      --background-primary: #{adjust-color($surface0, $alpha: -0.1)};
    }
  }

  div[class^="scroller-"] {
    [role="button"] {
      --background-tertiary: #{adjust-color($subtext0, $alpha: -0.85)};
      --background-floating: #{adjust-color($subtext0, $alpha: -0.88)};

      div[class*="jumpButton-"] {
        background-color: $surface0;
      }
    }
  }
}

div[class*="rolesList"] {
  // make box lighter
  div[class^="role-"],
  button[class^="addButton-"] {
    background-color: lighten($mantle, 4%);
  }

  div[class^="role-"] {
    span[class^="roleCircle-"] {
      // default roles
      &[style*="background-color: rgb(185, 187, 190)"] {
        background-color: $subtext0 !important;
      }

      // base color roles
      &[style*="background-color: rgb(54, 57, 62)"],
      &[style*="background-color: rgb(53, 57, 64)"] {
        background-color: $base !important;
      }
    }
  }
}

div[class*="layerContainer"] {
  > div[class*="layer"] {
    // reaction popout
    div[class^="reactors"] {
      background-color: var(--background-primary);
    }

    // the not selector should make it not style the user popouts
    div[class^="scroller"]:not([style*="padding-right: 4px;"]) {
      background-color: var(--background-secondary);
    }

    div[class*="reactorDefault"] {
      -webkit-box-shadow: inset 0 -1px 0 var(--background-modifier-accent);
      box-shadow: inset 0 -1px 0 var(--background-modifier-accent);
    }

    div[class*="reactionSelected"] {
      background-color: var(--background-modifier-selected);
    }

    // in DM -> select friends for group DM
    div[class*="friendSelected"] {
      background: $surface0 !important;
    }

    div[class*="header"] {
      background: $mantle;
    }
  }
}

// gif/sticker/emoji section
section[class^="positionContainer-"] {
  // colors tab when active
  button[class*="navButtonActive"] {
    background-color: $brand;
    color: $crust;
  }
}

#emoji-picker-tab-panel {
  // more transparent to make things more bearable
  [class*="stickerInspected-"] [class*="inspectedIndicator"],
  [class^="emojiItem-"][class*="emojiItemSelected-"] {
    background-color: var(--brand-experiment-25a);
  }

  // newly added thing
  [class*="newlyAddedHighlight-"] {
    border: 1px solid $green;

    ~ [class*="newlyAddedBadge-"] {
      background: $green !important;
      color: $crust;
    }
  }
}

// same as transparent above, but for stickers
[class*="stickerInspected-"] [class^="inspectedIndicator"] {
  background-color: var(--brand-experiment-25a);
}
/* ... */

